# procezorrust

./: Cargo.toml
src/: lib.rs  registry.rs  registry_constants.rs  registry_factories.rs  registry_providers.rs  service.rs  service_errors.rs  service_tests.rs  service_types.rs
src/registry/: dependency_graph.rs  result_builder.rs  term_calcul.rs
src/registry_constants/: article_consts.rs  concept_consts.rs  term_constants.rs
src/registry_factories/: article_config.rs  article_factory.rs  concept_factory.rs
src/registry_providers/: article_provider.rs  concept_provider.rs
src/service/: service_procezor.rs
src/service_errors/: term_result_error.rs
src/service_tests/: example_articles.rs  example_concepts.rs  example_constants.rs  example_procezor_salary_bonus_barter_test.rs  example_procezor_salary_home_office_test.rs  example_providers.rs  example_results.rs  example_service.rs
src/service_types/: article_code.rs  article_define.rs  article_seqs.rs  article_term.rs  concept_code.rs  concept_define.rs  contract_code.rs  contract_term.rs  month_code.rs  position_code.rs  position_term.rs  term_result.rs  term_symbol.rs  term_target.rs  variant_code.rs  version_code.rs
