[package]
name = "procezor"
version = "0.22.3"
edition = "2018"
description = "Salary, Health, Social, Taxing Properties for years 2011-2022"
documentation = "https://mzdyhrave.github.io/payrolldocs/"
readme = "library-readme.md"
license-file = "LICENSE"
keywords = ["payroll", "wages", "income", "tax", "insurance"]

include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.16"
rust_decimal_macros = "1.16"
queues = "1.0.2"
chrono = "0.4"
legalios = "0.22.2"